# makcu-cpp

./: .gitignore  CMakeLists.txt  COMPILATION_FIXES.md  COMPILATION_FIXES_FINAL.md  INTEGRATION_README.md  QUICKSTART.md  README.md  auto_integrate.py  basic_test.cpp  betteraifinal_changes.py  build.bat  build_makcu_cli.sh  integrate_makcu_cpp.py  makcu-basic-test.vcxproj  makcu-cpp.sln  makcu_cli.cpp  makcu_python_wrapper.py  quick_test.bat  test_makcu.py
.github/workflows/: build-release.yml
cmake/: makcu-config.cmake.in
examples/: advanced_features.cpp  keyboard_automation.cpp  mouse_automation.cpp  mouse_monitor.cpp
makcu-cpp/: main.cpp  makcu-cpp.cpp  makcu-cpp.vcxproj  makcu-cpp.vcxproj.filters
makcu-cpp/include/: makcu.h  utilities.h
makcu-cpp/src/: makcu.cpp  serialport.cpp  utilities.cpp
other/: BetterAifinal.py
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
